--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>20Haus ห้องพักรายเดือนสไตล์มินิมอล แก่งคอย สระบุรี</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon/favicon.ico">
   <!--Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,6 +21,10 @@
   <!-- Semantic UI -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.5.0/dist/semantic.min.css">
 
+  <!-- Owl Carousel -->
+  <link rel="stylesheet" href="/vendor/owlcarousel/owl.carousel.min.css">
+  <link rel="stylesheet" href="/vendor/owlcarousel/owl.theme.default.min.css">
+
   <!-- Icons -->
   <link
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
@@ -31,9 +36,6 @@
   <!-- My Style -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="vendor/themes/splide-default.min.css">
-
-
-
 
 </head>
 
@@ -212,6 +214,28 @@
       <div class="section" id="gallery">
         <h2 class="heading">Gallery</h2>
         <div class="gallery-container">
+
+
+          <div class="owl-carousel">
+            <div> Your Content </div>
+            <div> Your Content </div>
+            <div> Your Content </div>
+            <div> Your Content </div>
+            <div> Your Content </div>
+            <div> Your Content </div>
+            <div> Your Content </div>
+          </div>
+
+
+
+
+
+
+
+
+
+
+
 
 
           <section id="main-carousel" class="splide" aria-label="My Awesome Gallery">
@@ -534,18 +558,24 @@
               <i class="dropdown icon"></i>
             </div>
             <div class="content">
-              <p>ทางที่พักเป็นแบบ Fully Furnished มีสิ่งอำนวยความสะดวกภายในห้องครบครัน ได้แก่ แอร์ระบบ Inverter,
-                เตียงพร้อมฟูกขนาด 5ฟุต, Smart TV, โต๊ะทำงาน, ตู้เย็น, ตู้เสื้อผ้า</p>
+              <p>ทางที่พักเป็นแบบ Fully Furnished มีสิ่งอำนวยความสะดวกภายในห้องครบครันที่พร้อมพักอาศัยในเบื้องต้น ได้แก่
+                แอร์ระบบ Inverter,
+                เตียงพร้อมฟูกขนาด 5ฟุต, Smart Android TV, โต๊ะทำงาน, ตู้เย็น, ตู้เสื้อผ้า</p>
               <p>ห้องน้ำ: อ่างล้างหน้า, เครื่องทำน้ำอุ่น, สุขภัณ์ครบครัน,กระจกกั้นแบบบานเปลือย</p>
+              <p>ส่วนกลาง(ฟรี): Hi Speed Wifi, อ่างล้างจาน, เครื่องซักผ้า, ที่จอดรถ</p>
             </div>
             <!--end-->
             <!--start-->
             <div class="title">
-              <span class="heading-title">ที่พักมีที่จอดรถหรือไม่ และเสียค่าที่จอดรถมั้ย</span>
+              <span class="heading-title">ที่พักมีที่จอดรถหรือไม่</span>
               <i class="dropdown icon"></i>
             </div>
             <div class="content">
-              <p>มีที่จอดรถฟรีภายในบริเวณที่พัก 1 ที่ ฟรี! เราได้ติดกล้องวงจรปิดตามจุดต่างๆ เพื่อความปลอดภัย หรือสามารถจอดรภภายนอกได้เช่นกันหากที่จอดเต็ม ทั้งนี้ทั้งนั้น ทางที่พักไม่ได้รับประกันการเสียหายหรือความสูญหายที่เกิดแก่ยานพาหนะของผู้เช่า อนุญาตให้ผู้เช่ามียานพาหนะห้องละ 1 คันเท่านั้น เพื่อความสะดวกของห้องอื่น รวมทั้งสถานที่ที่ค่อนข้างมีพื้นที่จำกัด</p>
+              <p>มีที่จอดรถฟรีภายในบริเวณที่พัก 1 ที่ ฟรี! เราได้ติดกล้องวงจรปิดตามจุดต่างๆ เพื่อความปลอดภัย
+                หรือสามารถจอดรภภายนอกได้เช่นกันหากที่จอดเต็ม ทั้งนี้ทั้งนั้น
+                ทางที่พักไม่ได้รับประกันการเสียหายหรือความสูญหายที่เกิดแก่ยานพาหนะของผู้เช่า
+                อนุญาตให้ผู้เช่ามียานพาหนะห้องละ 1 คันเท่านั้น เพื่อความสะดวกของห้องอื่น
+                รวมทั้งสถานที่ที่ค่อนข้างมีพื้นที่จำกัด</p>
             </div>
             <!--end-->
 
@@ -556,13 +586,6 @@
 
 
     </div>
-
-
-
-
-
-
-
 
     <footer>
       <div class="section">
@@ -591,13 +614,23 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 
+    <!-- OwlCarousel -->
+
+    <script src="jquery.min.js"></script>
+    <script src="owlcarousel/owl.carousel.min.js"></script>
+
     <!-- SplideJS -->
     <script src="vendor/splide.min.js"></script>
     <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/js/splide-extension-auto-scroll.min.js"></script>
 
     <!-- Semantic UI -->
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.5.0/dist/semantic.min.js"></script>
 
+    <script>$(document).ready(function () {
+        $(".owl-carousel").owlCarousel();
+      });</script>
 
     <script>
       document.addEventListener('DOMContentLoaded', function () {
@@ -620,9 +653,7 @@
           dragMinThreshold: 10,
           perPage: 6,
           breakpoints: {
-            480: {
-              fixedWidth: 60,
-              fixedHeight: 44,
+            600: {
             },
           },
         });
@@ -632,6 +663,41 @@
         thumbnails.mount();
       });
     </script>
+
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    var main = new Splide('#main-carousel', {
+      type: 'fade',
+      rewind: true,
+      pagination: false,
+      arrows: false,
+    });
+
+    var thumbnails = new Splide('#thumbnail-carousel', {
+      fixedWidth: 100,
+      fixedHeight: 60,
+      autoWidth: true,
+      gap: 10,
+      rewind: true,
+      pagination: false,
+      focus: 'center',
+      isNavigation: true,
+      dragMinThreshold: 10,
+      perPage: 6,
+      breakpoints: {
+        600: {
+          fixedWidth: 80, // Reduce thumbnail width on smaller screens
+          perPage: 4, // Adjust number of thumbnails visible
+        },
+      },
+    });
+
+    main.sync(thumbnails);
+    main.mount();
+    thumbnails.mount();
+  });
+</script>
+
 
     <script>$('#accordion').collapse()</script>
     <script>$('.ui.accordion')
