--- a/index.html
+++ b/index.html
@@ -215,28 +215,10 @@
         <h2 class="heading">Gallery</h2>
         <div class="gallery-container">
 
-
-          <div class="owl-carousel">
-            <div> Your Content </div>
-            <div> Your Content </div>
-            <div> Your Content </div>
-            <div> Your Content </div>
-            <div> Your Content </div>
-            <div> Your Content </div>
-            <div> Your Content </div>
-          </div>
+          TEST
 
 
-
-
-
-
-
-
-
-
-
-
+      
 
           <section id="main-carousel" class="splide" aria-label="My Awesome Gallery">
             <div class="splide__track">
