--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <h2 class="heading">Gallery</h2>
         <div class="gallery-container">
 
-          TEST
+          TEST2
 
 
       
@@ -667,10 +667,9 @@
           dragMinThreshold: 10,
           perPage: 6,
           breakpoints: {
-            600: {
-              fixedWidth: '4rem',
-              fixedHeight: '2rem',
-              gap: '1rem',
+            768: {
+              fixedWidth: '60',
+              fixedHeight: '40',
             },
           },
         });
