--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <h2 class="heading">Gallery</h2>
         <div class="gallery-container">
 
-          TEST2
+          TEST3
 
 
       
@@ -635,7 +635,8 @@
           dragMinThreshold: 10,
           perPage: 6,
           breakpoints: {
-            600: {
+            768: {
+              autoWidth: false,
             },
           },
         });
