Fixed Mobile Thumbnail Good Now

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
   <title>20Haus ห้องพักรายเดือนสไตล์มินิมอล แก่งคอย สระบุรี</title>
   <link rel="icon" type="image/x-icon" href="/images/favicon/favicon.ico">
   <!--Font -->
@@ -20,10 +20,6 @@
 
   <!-- Semantic UI -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.5.0/dist/semantic.min.css">
-
-  <!-- Owl Carousel -->
-  <link rel="stylesheet" href="/vendor/owlcarousel/owl.carousel.min.css">
-  <link rel="stylesheet" href="/vendor/owlcarousel/owl.theme.default.min.css">
 
   <!-- Icons -->
   <link
@@ -214,11 +210,6 @@
       <div class="section" id="gallery">
         <h2 class="heading">Gallery</h2>
         <div class="gallery-container">
-
-          TEST3
-
-
-      
 
           <section id="main-carousel" class="splide" aria-label="My Awesome Gallery">
             <div class="splide__track">
@@ -596,10 +587,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 
-    <!-- OwlCarousel -->
-
-    <script src="jquery.min.js"></script>
-    <script src="owlcarousel/owl.carousel.min.js"></script>
 
     <!-- SplideJS -->
     <script src="vendor/splide.min.js"></script>
@@ -610,9 +597,6 @@
     <!-- Semantic UI -->
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.5.0/dist/semantic.min.js"></script>
 
-    <script>$(document).ready(function () {
-        $(".owl-carousel").owlCarousel();
-      });</script>
 
     <script>
       document.addEventListener('DOMContentLoaded', function () {
