Add More Gallery Link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
   <title>20Haus ห้องพักรายเดือนสไตล์มินิมอล แก่งคอย สระบุรี</title>
   <link rel="icon" type="image/x-icon" href="/images/favicon/favicon.ico">
   <!--Font -->
@@ -43,7 +44,7 @@
         <div class="contact-sp">
           <a class="callme" href="tel:+66992526596"><span class="material-symbols-outlined">
               call
-            </span>ติดต่อ</a>
+            </span></a>
           <a href="https://line.me/R/ti/p/@296dgedx" target="_blank"><img class="app" src="images/line.png"
               alt="LineID"></a>
           <a href="https://www.facebook.com/20Haus" target="_blank"><img class="app" src="images/facebook.png"
@@ -59,7 +60,7 @@
       <div class="contact">
         <a class="callme" href="tel:+66992526596"><span class="material-symbols-outlined">
             call
-          </span>ติดต่อ</a>
+          </span></a>
         <a href="https://line.me/R/ti/p/@296dgedx" target="_blank"><img class="app" src="images/line.png"
             alt="LineID"></a>
         <a href="https://www.facebook.com/20Haus" target="_blank"><img class="app" src="images/facebook.png"
@@ -322,6 +323,18 @@
           </section>
 
         </div>
+        <div class="more-gallery">
+          <a href="https://flic.kr/s/aHBqjC7Das" target="_blank">
+            <p>ดูภาพเพิ่มเติม</p>
+            <span class="material-symbols-outlined">
+              <span class="material-symbols-outlined">
+                chevron_right
+                </span>
+            </span>
+          </a>
+
+        </div>
+
 
       </div>
 
@@ -534,7 +547,7 @@
               <p>ทางที่พักเป็นแบบ Fully Furnished มีสิ่งอำนวยความสะดวกภายในห้องครบครันที่พร้อมพักอาศัยในเบื้องต้น ได้แก่
                 แอร์ระบบ Inverter,
                 เตียงพร้อมฟูกขนาด 5ฟุต, Smart Android TV, โต๊ะทำงาน, ตู้เย็น, ตู้เสื้อผ้า</p>
-              <p>ห้องน้ำ: อ่างล้างหน้า, เครื่องทำน้ำอุ่น, สุขภัณ์ครบครัน,กระจกกั้นแบบบานเปลือย</p>
+              <p>ห้องน้ำ: อ่างล้างหน้า, เครื่องทำน้ำอุ่น, สุขภัณฑ์ครบครัน,กระจกกั้นแบบบานเปลือย</p>
               <p>ส่วนกลาง(ฟรี): Hi Speed Wifi, อ่างล้างจาน, เครื่องซักผ้า, ที่จอดรถ</p>
             </div>
             <!--end-->
@@ -546,7 +559,8 @@
             <div class="content">
               <p>มีที่จอดรถฟรีภายในบริเวณที่พัก 1 ที่ ฟรี! เราได้ติดกล้องวงจรปิดตามจุดต่างๆ เพื่อความปลอดภัย
                 หรือสามารถจอดรภภายนอกได้เช่นกันหากที่จอดเต็ม ทั้งนี้ทั้งนั้น
-                ทางที่พักไม่ได้รับประกันการเสียหายหรือความสูญหายที่เกิดแก่ยานพาหนะของผู้เช่า
+                ทางที่พัก<span
+                  style="text-decoration: underline; font-weight: 400;">ไม่ได้</span>รับประกันการเสียหายหรือความสูญหายที่เกิดแก่ยานพาหนะของผู้เช่า
                 อนุญาตให้ผู้เช่ามียานพาหนะห้องละ 1 คันเท่านั้น เพื่อความสะดวกของห้องอื่น
                 รวมทั้งสถานที่ที่ค่อนข้างมีพื้นที่จำกัด</p>
             </div>
@@ -567,7 +581,7 @@
           <div class="contact">
             <a class="callme" href="tel:+66992526596"><span class="material-symbols-outlined">
                 call
-              </span>ติดต่อ</a>
+              </span></a>
             <a href="https://line.me/R/ti/p/@296dgedx" target="_blank"><img class="app" src="images/line.png"
                 alt="LineID"></a>
             <a href="https://www.facebook.com/20Haus" target="_blank"><img class="app" src="images/facebook.png"
