--- a/index.html
+++ b/index.html
@@ -361,15 +361,18 @@
                   มีระเบียง พื้นที่ใช้สอยขนาด 22 ตรม. (พักได้ 1-2 คน)</li>
                 <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>ค่าไฟ 8บาท/ยูนิต, ค่าน้ำ 20บาท/ยูนิต
                   (น้ำประปาสะอาดผ่านระบบกรองน้ำ)</li>
-                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>มีที่จอดรถฟรี (1 ที่)
-                  ติดกล้องวงจรปิดรอบบ้าน</li>
+                  <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>เฟอร์นิเจอร์ครบ : เตียง 5 ฟุตพร้อมฟูก, Android TV, โต๊ะทำงานพร้อมเก้าอี้และโคมไฟ, ตู้เสื้อผ้า, ตู้เย็น (เฟอร์นิเจอร์อื่นๆ ดูได้จากรูปภาพ)</li>
                 <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>แอร์ระบบ Inverter ประหยัดไฟ เสียงเงียบ
                 </li>
-                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>ห้องน้ำมีให้ครบ + เครื่องทำน้ำอุ่น</li>
+                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>พื้นห้องปูด้วย SPC โทนสีไม้เบิร์ช ปูเรียบต่อกันไม่มีร่อง เดินสบาย ไม่ลื่นล้ม
+                </li>
+                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>ห้องน้ำมีให้ครบ : เครื่องทำน้ำอุ่น อ่างล้างหน้า กระจก โถสุขภัณฑ์ กระจกกั้นโซนเปียกแห้ง เป็นสัดส่วน น่าอาบน้ำ</li>
                 <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>Free Wifi แรงเร็วครอบคุลมทั้งบ้าน</li>
+                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>มีที่จอดรถฟรี (1 ที่)
+                  ติดกล้องวงจรปิดรอบบ้าน</li>
                 <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>กล้องวงจรปิดรอบบ้าน</li>
                 <li><span class="fa-li"><i class="fa-solid fa-check"></i></span>ส่วนกลาง(ภายนอก): เครื่องซักผ้า,
-                  อ่างล้างจาน</li>
+                  อ่างล้างจาน, บาร์เล็กๆ ไว้นั่งชิลล์</li>
                 <li><span class="fa-li"><i class="fa-solid fa-xmark"></i></span>ไม่อนุญาตให้เลี้ยงสัตว์</li>
                 <li><span class="fa-li"><i class="fa-solid fa-xmark"></i></span>ไม่มีห้องครัว (ไม่เหมาะกับการประกอบอาหาร
                   เช่น ผัดทอด)</li>
